<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/card_number_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/card_number_text"
            app:layout_constraintStart_toStartOf="@+id/editTextUserName"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

        <TextView
            android:id="@+id/registration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/register_header"
            android:textAllCaps="true"
            android:textIsSelectable="false"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/user_name_text"
            app:layout_constraintStart_toStartOf="@+id/registration_textView"
            app:layout_constraintTop_toBottomOf="@+id/registration_textView" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/user_name_editable"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/user_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/user_name_textView" />

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="card number"
            android:ems="10"
            android:hint="@string/card_number_editable"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/card_number_textView"
            app:layout_constraintTop_toBottomOf="@+id/card_number_textView" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/game_start_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/server_speak_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Server result here" />

        <EditText
            android:id="@+id/player_input_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/input_choice"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/server_speak_textView"
            app:layout_constraintTop_toBottomOf="@+id/server_speak_textView"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_input_textView">

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send_button" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit_button" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>